Refactor more Node2Vec tests